Fix styling for inline story state icons
The I was more shallow than the others so it did not look good. With
inline-block we get the spans to behave as circles. Better would be
markup changes but that markup is hardcoded to many places.

--- a/webapp/src/main/webapp/static/css/dynamictable.css
+++ b/webapp/src/main/webapp/static/css/dynamictable.css
@@ -446,14 +446,16 @@ button.dynamics-button:focus, button.dynamics-button:hover {
 }
 
 .inlineStoryState {
-  font-size: 80%;
+  font-size: 10px;
+  -moz-border-radius: 999px;
+  -webkit-border-radius: 999px;
+  border-radius: 999px;
   border: 1px solid rgba(0,0,0,0.3);
-  -moz-border-radius: 1em;
-  -webkit-border-radius: 1em;
-  border-radius: 1em;
-  padding: 0 0.3em !important;
-  display: inline;
-  width: 1em;
+  padding: 3px;
+  display: inline-block;
+  width: 8px;
+  height: 8px;
+  line-height: 10px;
   text-align: center;
   
 }
